// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCheckListTest render 0 results 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={false}
    idPrefix="test0"
    results={Array []}
    showInstanceCount={false}
    showInstances={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "report-checks",
    },
    "ref": null,
    "rendered": Array [],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "report-checks",
      },
      "ref": null,
      "rendered": Array [],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ReportCheckListTest render 0 results with congratulations 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={true}
    idPrefix="test0"
    results={Array []}
    showInstanceCount={true}
    showInstances={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": "report-congrats",
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <p>
          Congratulations! You have no failed checks.
        </p>,
        <div
          className="report-congrats-image"
        >
          <InlineImage
            alt=""
            type={1}
          />
        </div>,
      ],
      "className": "report-congrats",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Congratulations! You have no failed checks.",
        },
        "ref": null,
        "rendered": "Congratulations! You have no failed checks.",
        "type": "p",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <InlineImage
            alt=""
            type={1}
          />,
          "className": "report-congrats-image",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "alt": "",
            "type": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": "report-congrats",
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <p>
            Congratulations! You have no failed checks.
          </p>,
          <div
            className="report-congrats-image"
          >
            <InlineImage
              alt=""
              type={1}
            />
          </div>,
        ],
        "className": "report-congrats",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Congratulations! You have no failed checks.",
          },
          "ref": null,
          "rendered": "Congratulations! You have no failed checks.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <InlineImage
              alt=""
              type={1}
            />,
            "className": "report-congrats-image",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "",
              "type": 1,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ReportCheckListTest render 1 result with instances 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={true}
    idPrefix="test1"
    results={
      Array [
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ],
          "help": "rule-help-1",
          "helpUrl": "https://help-url-1/",
          "id": "rule-id-1",
          "nodes": Array [
            Object {},
            Object {},
          ],
        },
      ]
    }
    showInstanceCount={true}
    showInstances={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test1-0"
              href="https://help-url-1/"
            >
              rule-id-1
              :
            </NewTabLink>

            <span
              id="check-help-test1-0"
            >
              rule-help-1
            </span>

            <span>
              (
              2
              )
            </span>
            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 1",
                    "text": "test text 1",
                  },
                ]
              }
            />
          </div>
          <ReportInstanceList
            nodeResults={
              Array [
                Object {},
                Object {},
              ]
            }
          />
        </li>,
      ],
      "className": "report-checks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "report-check-0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test1-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test1-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>,
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test1-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test1-0"
                >
                  rule-help-1
                </span>,
                " ",
                <span>
                  (
                  2
                  )
                </span>,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test1-0",
                  "children": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "href": "https://help-url-1/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-1",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-1",
                  "id": "check-help-test1-0",
                },
                "ref": null,
                "rendered": "rule-help-1",
                "type": "span",
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "(",
                    2,
                    ") ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "(",
                  2,
                  ") ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "nodeResults": Array [
                Object {},
                Object {},
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test1-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test1-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />
          </li>,
        ],
        "className": "report-checks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "report-check-0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test1-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>

                <span
                  id="check-help-test1-0"
                >
                  rule-help-1
                </span>

                <span>
                  (
                  2
                  )
                </span>
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />
              </div>,
              <ReportInstanceList
                nodeResults={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              />,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test1-0"
                    href="https://help-url-1/"
                  >
                    rule-id-1
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test1-0"
                  >
                    rule-help-1
                  </span>,
                  " ",
                  <span>
                    (
                    2
                    )
                  </span>,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 1",
                          "text": "test text 1",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test1-0",
                    "children": Array [
                      "rule-id-1",
                      ":",
                    ],
                    "href": "https://help-url-1/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-1",
                    "id": "check-help-test1-0",
                  },
                  "ref": null,
                  "rendered": "rule-help-1",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      2,
                      ") ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    2,
                    ") ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "nodeResults": Array [
                  Object {},
                  Object {},
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ReportCheckListTest render 2 results 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={false}
    idPrefix="test2"
    results={
      Array [
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ],
          "help": "rule-help-1",
          "helpUrl": "https://help-url-1/",
          "id": "rule-id-1",
          "nodes": Array [
            Object {},
            Object {},
          ],
        },
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ],
          "help": "rule-help-2",
          "helpUrl": "https://help-url-2/",
          "id": "rule-id-2",
          "nodes": Array [
            Object {},
          ],
        },
      ]
    }
    showInstanceCount={true}
    showInstances={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-0"
              href="https://help-url-1/"
            >
              rule-id-1
              :
            </NewTabLink>

            <span
              id="check-help-test2-0"
            >
              rule-help-1
            </span>

            <span>
              (
              2
              )
            </span>
            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 1",
                    "text": "test text 1",
                  },
                ]
              }
            />
          </div>
          <ReportInstanceList
            nodeResults={
              Array [
                Object {},
                Object {},
              ]
            }
          />
        </li>,
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-1"
              href="https://help-url-2/"
            >
              rule-id-2
              :
            </NewTabLink>

            <span
              id="check-help-test2-1"
            >
              rule-help-2
            </span>

            <span>
              (
              1
              )
            </span>
            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 2",
                    "text": "test text 2",
                  },
                ]
              }
            />
          </div>
          <ReportInstanceList
            nodeResults={
              Array [
                Object {},
              ]
            }
          />
        </li>,
      ],
      "className": "report-checks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "report-check-0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>,
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>,
                " ",
                <span>
                  (
                  2
                  )
                </span>,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-0",
                  "children": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "href": "https://help-url-1/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-1",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-1",
                  "id": "check-help-test2-0",
                },
                "ref": null,
                "rendered": "rule-help-1",
                "type": "span",
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "(",
                    2,
                    ") ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "(",
                  2,
                  ") ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "nodeResults": Array [
                Object {},
                Object {},
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "report-check-1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <span>
                (
                1
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>,
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                ]
              }
            />,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>,
                " ",
                <span>
                  (
                  1
                  )
                </span>,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-1",
                  "children": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "href": "https://help-url-2/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-2",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-2",
                  "id": "check-help-test2-1",
                },
                "ref": null,
                "rendered": "rule-help-2",
                "type": "span",
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "(",
                    1,
                    ") ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "(",
                  1,
                  ") ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "nodeResults": Array [
                Object {},
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />
          </li>,
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <span>
                (
                1
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                ]
              }
            />
          </li>,
        ],
        "className": "report-checks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "report-check-0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>

                <span>
                  (
                  2
                  )
                </span>
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />
              </div>,
              <ReportInstanceList
                nodeResults={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              />,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-0"
                    href="https://help-url-1/"
                  >
                    rule-id-1
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-0"
                  >
                    rule-help-1
                  </span>,
                  " ",
                  <span>
                    (
                    2
                    )
                  </span>,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 1",
                          "text": "test text 1",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-0",
                    "children": Array [
                      "rule-id-1",
                      ":",
                    ],
                    "href": "https://help-url-1/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-1",
                    "id": "check-help-test2-0",
                  },
                  "ref": null,
                  "rendered": "rule-help-1",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      2,
                      ") ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    2,
                    ") ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "nodeResults": Array [
                  Object {},
                  Object {},
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "report-check-1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>

                <span>
                  (
                  1
                  )
                </span>
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />
              </div>,
              <ReportInstanceList
                nodeResults={
                  Array [
                    Object {},
                  ]
                }
              />,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-1"
                    href="https://help-url-2/"
                  >
                    rule-id-2
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-1"
                  >
                    rule-help-2
                  </span>,
                  " ",
                  <span>
                    (
                    1
                    )
                  </span>,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 2",
                          "text": "test text 2",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-1",
                    "children": Array [
                      "rule-id-2",
                      ":",
                    ],
                    "href": "https://help-url-2/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-2",
                    "id": "check-help-test2-1",
                  },
                  "ref": null,
                  "rendered": "rule-help-2",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      1,
                      ") ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    1,
                    ") ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "nodeResults": Array [
                  Object {},
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ReportCheckListTest render, showInstanceCount = false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={false}
    idPrefix="test2"
    results={
      Array [
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ],
          "help": "rule-help-1",
          "helpUrl": "https://help-url-1/",
          "id": "rule-id-1",
          "nodes": Array [
            Object {},
            Object {},
          ],
        },
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ],
          "help": "rule-help-2",
          "helpUrl": "https://help-url-2/",
          "id": "rule-id-2",
          "nodes": Array [
            Object {},
          ],
        },
      ]
    }
    showInstanceCount={false}
    showInstances={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-0"
              href="https://help-url-1/"
            >
              rule-id-1
              :
            </NewTabLink>

            <span
              id="check-help-test2-0"
            >
              rule-help-1
            </span>

            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 1",
                    "text": "test text 1",
                  },
                ]
              }
            />
          </div>
          <ReportInstanceList
            nodeResults={
              Array [
                Object {},
                Object {},
              ]
            }
          />
        </li>,
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-1"
              href="https://help-url-2/"
            >
              rule-id-2
              :
            </NewTabLink>

            <span
              id="check-help-test2-1"
            >
              rule-help-2
            </span>

            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 2",
                    "text": "test text 2",
                  },
                ]
              }
            />
          </div>
          <ReportInstanceList
            nodeResults={
              Array [
                Object {},
              ]
            }
          />
        </li>,
      ],
      "className": "report-checks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "report-check-0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>,
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>,
                " ",
                undefined,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-0",
                  "children": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "href": "https://help-url-1/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-1",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-1",
                  "id": "check-help-test2-0",
                },
                "ref": null,
                "rendered": "rule-help-1",
                "type": "span",
              },
              " ",
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "nodeResults": Array [
                Object {},
                Object {},
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "report-check-1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>,
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                ]
              }
            />,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>,
                " ",
                undefined,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-1",
                  "children": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "href": "https://help-url-2/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-2",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-2",
                  "id": "check-help-test2-1",
                },
                "ref": null,
                "rendered": "rule-help-2",
                "type": "span",
              },
              " ",
              undefined,
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "nodeResults": Array [
                Object {},
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                  Object {},
                ]
              }
            />
          </li>,
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>
            <ReportInstanceList
              nodeResults={
                Array [
                  Object {},
                ]
              }
            />
          </li>,
        ],
        "className": "report-checks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "report-check-0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>

                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />
              </div>,
              <ReportInstanceList
                nodeResults={
                  Array [
                    Object {},
                    Object {},
                  ]
                }
              />,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-0"
                    href="https://help-url-1/"
                  >
                    rule-id-1
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-0"
                  >
                    rule-help-1
                  </span>,
                  " ",
                  undefined,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 1",
                          "text": "test text 1",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-0",
                    "children": Array [
                      "rule-id-1",
                      ":",
                    ],
                    "href": "https://help-url-1/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-1",
                    "id": "check-help-test2-0",
                  },
                  "ref": null,
                  "rendered": "rule-help-1",
                  "type": "span",
                },
                " ",
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "nodeResults": Array [
                  Object {},
                  Object {},
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "report-check-1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>

                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />
              </div>,
              <ReportInstanceList
                nodeResults={
                  Array [
                    Object {},
                  ]
                }
              />,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-1"
                    href="https://help-url-2/"
                  >
                    rule-id-2
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-1"
                  >
                    rule-help-2
                  </span>,
                  " ",
                  undefined,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 2",
                          "text": "test text 2",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-1",
                    "children": Array [
                      "rule-id-2",
                      ":",
                    ],
                    "href": "https://help-url-2/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-2",
                    "id": "check-help-test2-1",
                  },
                  "ref": null,
                  "rendered": "rule-help-2",
                  "type": "span",
                },
                " ",
                undefined,
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "nodeResults": Array [
                  Object {},
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ReportCheckListTest render, showInstances = false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReportCheckList
    congratulateIfEmpty={false}
    idPrefix="test2"
    results={
      Array [
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 1",
              "text": "test text 1",
            },
          ],
          "help": "rule-help-1",
          "helpUrl": "https://help-url-1/",
          "id": "rule-id-1",
          "nodes": Array [
            Object {},
            Object {},
          ],
        },
        Object {
          "description": "test-description",
          "guidanceLinks": Array [
            Object {
              "href": "test href 2",
              "text": "test text 2",
            },
          ],
          "help": "rule-help-2",
          "helpUrl": "https://help-url-2/",
          "id": "rule-id-2",
          "nodes": Array [
            Object {},
          ],
        },
      ]
    }
    showInstanceCount={true}
    showInstances={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-0"
              href="https://help-url-1/"
            >
              rule-id-1
              :
            </NewTabLink>

            <span
              id="check-help-test2-0"
            >
              rule-help-1
            </span>

            <span>
              (
              2
              )
            </span>
            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 1",
                    "text": "test text 1",
                  },
                ]
              }
            />
          </div>
        </li>,
        <li
          className="report-check"
        >
          <div
            className="report-check-top"
          >
            <NewTabLink
              aria-describedby="check-help-test2-1"
              href="https://help-url-2/"
            >
              rule-id-2
              :
            </NewTabLink>

            <span
              id="check-help-test2-1"
            >
              rule-help-2
            </span>

            <span>
              (
              1
              )
            </span>
            <GuidanceLinks
              links={
                Array [
                  Object {
                    "href": "test href 2",
                    "text": "test text 2",
                  },
                ]
              }
            />
          </div>
        </li>,
      ],
      "className": "report-checks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "report-check-0",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>,
            undefined,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>,
                " ",
                <span>
                  (
                  2
                  )
                </span>,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-0",
                  "children": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "href": "https://help-url-1/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-1",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-1",
                  "id": "check-help-test2-0",
                },
                "ref": null,
                "rendered": "rule-help-1",
                "type": "span",
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "(",
                    2,
                    ") ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "(",
                  2,
                  ") ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          undefined,
        ],
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "report-check-1",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <span>
                (
                1
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>,
            undefined,
          ],
          "className": "report-check",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>,
                " ",
                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>,
                " ",
                <span>
                  (
                  1
                  )
                </span>,
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />,
              ],
              "className": "report-check-top",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "aria-describedby": "check-help-test2-1",
                  "children": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "href": "https://help-url-2/",
                },
                "ref": null,
                "rendered": Array [
                  "rule-id-2",
                  ":",
                ],
                "type": [Function],
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "rule-help-2",
                  "id": "check-help-test2-1",
                },
                "ref": null,
                "rendered": "rule-help-2",
                "type": "span",
              },
              " ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "(",
                    1,
                    ") ",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "(",
                  1,
                  ") ",
                ],
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "links": Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ],
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
          undefined,
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-0"
                href="https://help-url-1/"
              >
                rule-id-1
                :
              </NewTabLink>

              <span
                id="check-help-test2-0"
              >
                rule-help-1
              </span>

              <span>
                (
                2
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 1",
                      "text": "test text 1",
                    },
                  ]
                }
              />
            </div>
          </li>,
          <li
            className="report-check"
          >
            <div
              className="report-check-top"
            >
              <NewTabLink
                aria-describedby="check-help-test2-1"
                href="https://help-url-2/"
              >
                rule-id-2
                :
              </NewTabLink>

              <span
                id="check-help-test2-1"
              >
                rule-help-2
              </span>

              <span>
                (
                1
                )
              </span>
              <GuidanceLinks
                links={
                  Array [
                    Object {
                      "href": "test href 2",
                      "text": "test text 2",
                    },
                  ]
                }
              />
            </div>
          </li>,
        ],
        "className": "report-checks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "report-check-0",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-0"
                  href="https://help-url-1/"
                >
                  rule-id-1
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-0"
                >
                  rule-help-1
                </span>

                <span>
                  (
                  2
                  )
                </span>
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ]
                  }
                />
              </div>,
              undefined,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-0"
                    href="https://help-url-1/"
                  >
                    rule-id-1
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-0"
                  >
                    rule-help-1
                  </span>,
                  " ",
                  <span>
                    (
                    2
                    )
                  </span>,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 1",
                          "text": "test text 1",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-0",
                    "children": Array [
                      "rule-id-1",
                      ":",
                    ],
                    "href": "https://help-url-1/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-1",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-1",
                    "id": "check-help-test2-0",
                  },
                  "ref": null,
                  "rendered": "rule-help-1",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      2,
                      ") ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    2,
                    ") ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 1",
                        "text": "test text 1",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            undefined,
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "report-check-1",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="report-check-top"
              >
                <NewTabLink
                  aria-describedby="check-help-test2-1"
                  href="https://help-url-2/"
                >
                  rule-id-2
                  :
                </NewTabLink>

                <span
                  id="check-help-test2-1"
                >
                  rule-help-2
                </span>

                <span>
                  (
                  1
                  )
                </span>
                <GuidanceLinks
                  links={
                    Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ]
                  }
                />
              </div>,
              undefined,
            ],
            "className": "report-check",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NewTabLink
                    aria-describedby="check-help-test2-1"
                    href="https://help-url-2/"
                  >
                    rule-id-2
                    :
                  </NewTabLink>,
                  " ",
                  <span
                    id="check-help-test2-1"
                  >
                    rule-help-2
                  </span>,
                  " ",
                  <span>
                    (
                    1
                    )
                  </span>,
                  <GuidanceLinks
                    links={
                      Array [
                        Object {
                          "href": "test href 2",
                          "text": "test text 2",
                        },
                      ]
                    }
                  />,
                ],
                "className": "report-check-top",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "aria-describedby": "check-help-test2-1",
                    "children": Array [
                      "rule-id-2",
                      ":",
                    ],
                    "href": "https://help-url-2/",
                  },
                  "ref": null,
                  "rendered": Array [
                    "rule-id-2",
                    ":",
                  ],
                  "type": [Function],
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "rule-help-2",
                    "id": "check-help-test2-1",
                  },
                  "ref": null,
                  "rendered": "rule-help-2",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "(",
                      1,
                      ") ",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "(",
                    1,
                    ") ",
                  ],
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "links": Array [
                      Object {
                        "href": "test href 2",
                        "text": "test text 2",
                      },
                    ],
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
            undefined,
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
